# PureTalk

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  website.yml
docs/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  indicator.rs  lib.rs  main.rs  tray.rs  updater.rs
src-tauri/src/voice/: assets.rs  clipboard.rs  mod.rs  recording.rs  server.rs  stt_cloud.rs  stt_local.rs  ws_client.rs
src/shared/: types.ts
src/windows/indicator/: Indicator.vue  index.html  main.ts
src/windows/settings/: Settings.vue  index.html
